Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@ Error message and password prompt
 
 <li>$:/view</li>
 
+<li>A Geometric Data Structure from Neuroscience</li>
+
 <li>A New Math for Learning Tasks (1)</li>
 
 <li>A New Math for Learning Tasks (2)</li>
@@ -205,6 +207,8 @@ Error message and password prompt
 
 <li>Computer Abstractions and Technology</li>
 
+<li>CS 201 Winter 2020</li>
+
 <li>Data Imputation Techniques</li>
 
 <li>Dealing with Missing Features</li>
@@ -218,6 +222,8 @@ Error message and password prompt
 <li>Equivalence Relations</li>
 
 <li>Explainability of Model</li>
+
+<li>Explainable AI: Making Visual Question Answering Systems More Transparent</li>
 
 <li>For Every and There Exists</li>
 
@@ -9772,7 +9778,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
+<div created="20200131001035174" list="[[CS 201 Winter 2020]] [[A Geometric Data Structure from Neuroscience]] [[Explainable AI: Making Visual Question Answering Systems More Transparent]] Welcome [[How to Contribute?]]" modified="20200131001137892" title="$:/StoryList" revision="9" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9820,11 +9826,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9944,6 +9950,23 @@ Error message and password prompt
 </div>
 <div created="20191121035138747" modified="20191121035148674" title="$:/view" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>classic</pre>
+</div>
+<div created="20200131001213334" modified="20200131001238602" tags="[[computer science]] [[talk summary]] [[data structures]] neuroscience" title="A Geometric Data Structure from Neuroscience" revision="1" bag="default">
+<pre>An intriguing primitive representation, &quot;expand-and-sparsify&quot;, appears in the olfactory system of the fly and the sensory systems of several other organisms. It maps an input vector to a much higher-dimensional sparse representation, using a random linear transformation followed by winner-take-all thresholding.
+
+I'll show that this representation has a variety of formal properties, such as (1) locality preservation,(2) universal approximation, and (3) adaptivity to manifold structure, that make it an attractive data structure for algorithms and machine learning.
+
+In particular, mimicking the fly's circuitry yields algorithms for similarity search and for novelty detection that have provable guarantees as well as being effective in practice.
+
+This talk is based on work with Saket Navlakha (Salk Institute), Chuck Stevens (Salk Institute), and Chris Tosh (Columbia). The published results appear in these two papers:
+
+S. Dasgupta, C.F. Stevens and S. Navlakha.
+A neural algorithm for a fundamental computing problem. Science 2017.
+https://science.sciencemag.org/content/sci/358/6364/793
+
+S. Dasgupta, T.C. Sheehan, C.F. Stevens and S. Navlakha.
+A neural data structure for novelty detection. PNAS, 2018.
+https://www.pnas.org/content/115/51/13093</pre>
 </div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191124054651558" modified="20191128004341837" tags="ongoing [[intelligence project]] research" title="A New Math for Learning Tasks (1)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>The idea emerged initially as a desire to define an inner product space for the set of reinforcement learning tasks to optimize  the work done by auxiliary tasks like in [[Discovery of Useful Questions as Auxiliary Tasks]]. 
@@ -10299,6 +10322,12 @@ Millions of Instructions Per Second = Instruction Count / Execution Time * 10^6 
 
 </pre>
 </div>
+<div created="20200131000351410" modified="20200131001031676" tags="[[computer science]] ucla" title="CS 201 Winter 2020" revision="1" bag="default">
+<pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent]]
+# [[A Geometric Data Structure from Neuroscience]]
+# 
+</pre>
+</div>
 <div author="Siddharth Joshi" created="20191122022337773" modified="20191122024526637" tags="[[machine learning]] [[feature engineering]]" title="Data Imputation Techniques" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Techniques to impute a feature value when one is missing for a given example:
 
@@ -10459,6 +10488,9 @@ If the relation is non-empty then symmetric and transitive imply reflexive.
 <pre>Most very accurate learning algorithms are 'black-boxes' i.e it is hard to understand why a model made a particular prediction. 
 
 e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accurate as opposed to [[K Nearest Neighbors]], [[Linear Regression]], [[Decision Tree Learning]] are quite easy to explain but perhaps not as accurate</pre>
+</div>
+<div created="20200131001053606" modified="20200131001133732" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent" revision="1" bag="default">
+<pre>https://www.cal.cs.ucla.edu/cgi-bin/webevent.cgi?cmd=showevent&amp;ncmd=calmonth&amp;cal=cal2&amp;id=1578079202-22878-1&amp;ncals=&amp;y=2020&amp;m=01&amp;d=14&amp;token=&amp;sb=0&amp;cf=cal&amp;lc=calmonth&amp;swe=1&amp;set=1&amp;sa=0&amp;sort=e,m,t&amp;ws=0&amp;sib=1&amp;de=1&amp;tf=0</pre>
 </div>
 <div created="20191227164059875" modified="20191227164351343" tags="math logic [[real analysis]]" title="For Every and There Exists" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* Negation of a for every x, proposition is true is there exists x such that proposition is false
