--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Error message and password prompt
 
 <li>$:/view</li>
 
-<li>A Geometric Data Structure from Neuroscience</li>
+<li>A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta</li>
 
 <li>A New Math for Learning Tasks (1)</li>
 
@@ -223,7 +223,7 @@ Error message and password prompt
 
 <li>Explainability of Model</li>
 
-<li>Explainable AI: Making Visual Question Answering Systems More Transparent</li>
+<li>Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney</li>
 
 <li>For Every and There Exists</li>
 
@@ -264,6 +264,8 @@ Error message and password prompt
 <li>Overview of Machine Learning</li>
 
 <li>Persistent Homology</li>
+
+<li>Quantum Temporal Logic by Nengkun Yu</li>
 
 <li>Reinforcement Learning: Introduction</li>
 
@@ -9778,7 +9780,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200131001035174" list="[[CS 201 Winter 2020]] [[A Geometric Data Structure from Neuroscience]] [[Explainable AI: Making Visual Question Answering Systems More Transparent]] Welcome [[How to Contribute?]]" modified="20200131001137892" title="$:/StoryList" revision="9" bag="default">
+<div created="20200131001035174" list="[[CS 201 Winter 2020]] [[Quantum Temporal Logic by Nengkun Yu]] [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]] [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]] Welcome [[How to Contribute?]]" modified="20200131001512257" title="$:/StoryList" revision="26" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9951,7 +9953,7 @@ Error message and password prompt
 <div created="20191121035138747" modified="20191121035148674" title="$:/view" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>classic</pre>
 </div>
-<div created="20200131001213334" modified="20200131001238602" tags="[[computer science]] [[talk summary]] [[data structures]] neuroscience" title="A Geometric Data Structure from Neuroscience" revision="1" bag="default">
+<div created="20200131001213334" modified="20200131002038873" tags="[[computer science]] [[talk summary]] [[data structures]] neuroscience" title="A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta" revision="1" bag="default">
 <pre>An intriguing primitive representation, &quot;expand-and-sparsify&quot;, appears in the olfactory system of the fly and the sensory systems of several other organisms. It maps an input vector to a much higher-dimensional sparse representation, using a random linear transformation followed by winner-take-all thresholding.
 
 I'll show that this representation has a variety of formal properties, such as (1) locality preservation,(2) universal approximation, and (3) adaptivity to manifold structure, that make it an attractive data structure for algorithms and machine learning.
@@ -10322,10 +10324,10 @@ Millions of Instructions Per Second = Instruction Count / Execution Time * 10^6 
 
 </pre>
 </div>
-<div created="20200131000351410" modified="20200131001031676" tags="[[computer science]] ucla" title="CS 201 Winter 2020" revision="1" bag="default">
+<div created="20200131000351410" modified="20200131001510969" tags="[[computer science]] ucla" title="CS 201 Winter 2020" revision="2" bag="default">
 <pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent]]
 # [[A Geometric Data Structure from Neuroscience]]
-# 
+# [[Quantum Temporal Logic]]
 </pre>
 </div>
 <div author="Siddharth Joshi" created="20191122022337773" modified="20191122024526637" tags="[[machine learning]] [[feature engineering]]" title="Data Imputation Techniques" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -10489,7 +10491,7 @@ If the relation is non-empty then symmetric and transitive imply reflexive.
 
 e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accurate as opposed to [[K Nearest Neighbors]], [[Linear Regression]], [[Decision Tree Learning]] are quite easy to explain but perhaps not as accurate</pre>
 </div>
-<div created="20200131001053606" modified="20200131001133732" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent" revision="1" bag="default">
+<div created="20200131001053606" modified="20200131002051541" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney" revision="1" bag="default">
 <pre>https://www.cal.cs.ucla.edu/cgi-bin/webevent.cgi?cmd=showevent&amp;ncmd=calmonth&amp;cal=cal2&amp;id=1578079202-22878-1&amp;ncals=&amp;y=2020&amp;m=01&amp;d=14&amp;token=&amp;sb=0&amp;cf=cal&amp;lc=calmonth&amp;swe=1&amp;set=1&amp;sa=0&amp;sort=e,m,t&amp;ws=0&amp;sib=1&amp;de=1&amp;tf=0</pre>
 </div>
 <div created="20191227164059875" modified="20191227164351343" tags="math logic [[real analysis]]" title="For Every and There Exists" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -10859,6 +10861,110 @@ Useful Links:
 
 * https://towardsdatascience.com/from-tda-to-dl-d06f234f51d
 </pre>
+</div>
+<div created="20200131001522764" modified="20200131005926100" tags="[[talk summary]] [[quantum computing]]" title="Quantum Temporal Logic by Nengkun Yu" revision="5" bag="default">
+<pre>Quantum Shock - Quantum computing can solve halting problem (Ji-Natarajan)
+
+What we have so far - more reliable hardware - Sycamore, 53 qubit, Quantum Internet, Q#, Cirq, Qiskit, Quantum Hoare Logic
+
+Current status of verification - focused on quantum programs that receive input at beginning and produce output at end (quantum state) at end - transformational
+
+To use QC, we need - Quantum operation system - reactive programs, concurrent programs
+
+Distributed quantum computing - Tani, Kobayashi, Matsumoto - Quantum leader election in anonymous algorithm, Aharonov, Ganz, Magnin - quantum protocol for dining philosophers problem
+
+Systems and Programs (Classical) - S - set of states, R - transition relation holding between a state and its possible successors, $$S_0$$
+
+An execution is S0, S1, S2 s.t. R(Si, Si+1) always holds
+
+Classical sequential programs - pi - control compoonent, finite # of values, locs in program, u - data component
+
+Classicial concurrent programs - pi _i - finite program of ith processor, u - shared data
+S = pi _i to n
+R = (N, T) - next state function and data transformaton function
+
+next state function and data transformation function are still determinstic and depend on a single control at a time
+
+scheduling choice function is nondeterministic
+
+Temporal Logic - a time hierarchy of specification - Amir Puneli
+
+Temporal Logic - any systems of rules and symbolism for representing, and reasoning about propositions qualified in terms of time 
+
+I am ''always'' hungry, I am ''eventually'' hungry
+
+Temporal Logic - provides a single logicial system for describing the program at any level of abstraction
+
+Prelimaries - hilbert space H - finite dimensional complex vector space, a pure quantum state is a column vector w unit 2 norm
+
+Linear Matrix Space - set of square matrix mapping from H to itself
+
+Quantum State p - semidefinite element of L(H) w unit trace
+
+Hermitian matrix - w nonnegative eigenvalues and summation of diagonal elements is 1
+
+Quantum Measurement - a measurement consists of a set of matrices (E1, ... , En)
+
+sum_k Ek^dagger Ek = I_h
+
+output according to prob distribution
+
+Quantum operation:
+
+* Kraus decomposition 
+* Unitary Operation
+* Measurement
+
+Tensor Product - quantum comptutational power comes from this
+
+Concurrent Quantum Programs
+
+Quantum Automaton - A = (H, Actm E_alpha, alpha \in act, sigma 0)
+
+H is the hilbert space, act is the set of operations, e_a is the quantum operation, sigma 0 is the inistial state
+
+at each step, e_Alpha is chosen nondeterministically and applied on the current state
+
+This model is weak as nondeterminism has no relation with current state
+
+Concurrent Quantum Programming Model 
+
+pi = (H, L, Act, ,S, Q, p_0, l_0, s)
+
+L = location of each program
+
+S = register of the scheduler, which records the acting program
+
+p_0 is the initial state
+
+s in S is the acting program in the first round
+
+Act is the mapping which associates each location of each program with a quantum program and a measurement
+
+Q = Q_1 * Q_2 * ... * Q_m denotes the next location choice and the next program choice, could be nondeterministic  
+
+Atomic Propositions - The logic of quantum mechanics - need to use projections as quantum atomic propositions to define quantum logic, p satisy P if Pp = p  
+
+Syntax of Temporal Logic - AP is the set of all projections, the set of qtl formulas is defined inductive as:
+
+* if P in AP, then P is a QTL formula
+* if P in AP, then diamond (eventually operator) tilda P in AP is a QTL formula
+
+For state sequence w = sigma 0, sigma 1 ... sigma k
+w(k) = sigma k, W^i = delete first i states of program
+
+1. w satisfy p if w(0) satisfy P
+2. ...
+
+a qtl formula is valid for phi a quantum program if for any w sequence of admissible state, w, we have w satisfy phi
+
+Bohm - Jacopini Theorems - any deterministic flowchart is equivalent to a while program
+
+Quantum Bohm Jacopini Theorem - any flowchart quantum program with non deterministm is equivalent to a quantum while program
+
+while m(p) = 1, do S od; M(p) = 1, measure p by (M0, M1)
+
+Decidability of QTL formula - programs without nondeterminism, </pre>
 </div>
 <div author="Siddharth Joshi" created="20191125022514242" modified="20191125022735084" tags="[[reinforcement learning]] [[machine learning]] incomplete" title="Reinforcement Learning: Introduction" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://skymind.ai/wiki/deep-reinforcement-learning</pre>
