Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9780,7 +9780,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200131001035174" list="[[CS 201 Winter 2020]] [[Quantum Temporal Logic by Nengkun Yu]] [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]] [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]] Welcome [[How to Contribute?]]" modified="20200131001512257" title="$:/StoryList" revision="26" bag="default">
+<div created="20200131001035174" list="[[CS 201 Winter 2020]] [[Quantum Temporal Logic by Nengkun Yu]] [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]] [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]] Welcome [[How to Contribute?]]" modified="20200131001512257" title="$:/StoryList" revision="28" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10862,7 +10862,7 @@ Useful Links:
 * https://towardsdatascience.com/from-tda-to-dl-d06f234f51d
 </pre>
 </div>
-<div created="20200131001522764" modified="20200131005926100" tags="[[talk summary]] [[quantum computing]]" title="Quantum Temporal Logic by Nengkun Yu" revision="5" bag="default">
+<div created="20200131001522764" modified="20200131030521332" tags="[[needs formatting]] [[talk summary]] [[quantum computing]]" title="Quantum Temporal Logic by Nengkun Yu" revision="6" bag="default">
 <pre>Quantum Shock - Quantum computing can solve halting problem (Ji-Natarajan)
 
 What we have so far - more reliable hardware - Sycamore, 53 qubit, Quantum Internet, Q#, Cirq, Qiskit, Quantum Hoare Logic
