Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/Excise/--1675782876/type</li>
+
+<li>$:/state/showeditpreview</li>
+
+<li>$:/state/sidebar</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -182,6 +188,8 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -207,8 +215,6 @@ Error message and password prompt
 
 <li>Computer Abstractions and Technology</li>
 
-<li>CS 201 Winter 2020</li>
-
 <li>Data Imputation Techniques</li>
 
 <li>Dealing with Missing Features</li>
@@ -219,11 +225,15 @@ Error message and password prompt
 
 <li>Do Calculus</li>
 
+<li>Draft of 'Completeness'</li>
+
 <li>Equivalence Relations</li>
 
 <li>Explainability of Model</li>
 
 <li>Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney</li>
+
+<li>February Learning List</li>
 
 <li>For Every and There Exists</li>
 
@@ -247,6 +257,8 @@ Error message and password prompt
 
 <li>Meta-Learning via Meta-Gradients</li>
 
+<li>Metric Spaces</li>
+
 <li>Model Theory</li>
 
 <li>Natural Numbers</li>
@@ -258,6 +270,8 @@ Error message and password prompt
 <li>Number of Features and Examples</li>
 
 <li>One-Hot Encoding</li>
+
+<li>Open and Closed Sets</li>
 
 <li>Overfitting</li>
 
@@ -275,6 +289,10 @@ Error message and password prompt
 
 <li>The Hundred-Page Machine Learning Book by Andriy Burkov</li>
 
+<li>Things I want to learn about in 2020</li>
+
+<li>UCLA CS 201 Winter 2020</li>
+
 <li>UCLA CS M146 - Machine Learning</li>
 
 <li>UCLA CS M151B - Computer Architecture</li>
@@ -282,6 +300,8 @@ Error message and password prompt
 <li>UCLA CS M282A - Cryptography 1</li>
 
 <li>UCLA Math 115A - Linear Algebra</li>
+
+<li>UCLA Math 121 Topology</li>
 
 <li>UCLA Math 131AH - Real Analysis</li>
 
@@ -9768,6 +9788,15 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
+<div created="20200131052719399" modified="20200131052719399" title="$:/state/Excise/--1675782876/type" revision="1" bag="default">
+<pre>link</pre>
+</div>
+<div created="20200131052606132" modified="20200131055059561" title="$:/state/showeditpreview" revision="11" bag="default">
+<pre>yes</pre>
+</div>
+<div created="20200131055056734" modified="20200131061217232" title="$:/state/sidebar" revision="2" bag="default">
+<pre>yes</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9780,7 +9809,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200131001035174" list="[[CS 201 Winter 2020]] [[Quantum Temporal Logic by Nengkun Yu]] [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]] [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]] Welcome [[How to Contribute?]]" modified="20200131001512257" title="$:/StoryList" revision="28" bag="default">
+<div created="20200131001035174" list="[[Metric Spaces]] [[Draft of 'Completeness']]" modified="20200131061147387" title="$:/StoryList" revision="84" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9840,6 +9869,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200131051300269" modified="20200131051353973" title="$:/temp/search" revision="5" bag="default">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10324,12 +10356,6 @@ Millions of Instructions Per Second = Instruction Count / Execution Time * 10^6 
 
 </pre>
 </div>
-<div created="20200131000351410" modified="20200131001510969" tags="[[computer science]] ucla" title="CS 201 Winter 2020" revision="2" bag="default">
-<pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent]]
-# [[A Geometric Data Structure from Neuroscience]]
-# [[Quantum Temporal Logic]]
-</pre>
-</div>
 <div author="Siddharth Joshi" created="20191122022337773" modified="20191122024526637" tags="[[machine learning]] [[feature engineering]]" title="Data Imputation Techniques" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Techniques to impute a feature value when one is missing for a given example:
 
@@ -10474,6 +10500,9 @@ tbd
 <div author="" created="20191124064904814" modified="20191124064949779" tags="research probability math" title="Do Calculus" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://arxiv.org/pdf/1305.5506.pdf</pre>
 </div>
+<div created="20200131061156893" draft.of="Completeness" draft.title="Completeness" modified="20200131061200892" tags="topology [[metric spaces]]" title="Draft of 'Completeness'" revision="3" bag="default">
+<pre></pre>
+</div>
 <div created="20191227170002568" modified="20191227170613995" tags="[[real analysis]] math [[discrete math]]" title="Equivalence Relations" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Relation on a set $$S$$ is a subset of $$S \times S$$
 
@@ -10493,6 +10522,10 @@ e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accur
 </div>
 <div created="20200131001053606" modified="20200131002051541" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney" revision="1" bag="default">
 <pre>https://www.cal.cs.ucla.edu/cgi-bin/webevent.cgi?cmd=showevent&amp;ncmd=calmonth&amp;cal=cal2&amp;id=1578079202-22878-1&amp;ncals=&amp;y=2020&amp;m=01&amp;d=14&amp;token=&amp;sb=0&amp;cf=cal&amp;lc=calmonth&amp;swe=1&amp;set=1&amp;sa=0&amp;sort=e,m,t&amp;ws=0&amp;sib=1&amp;de=1&amp;tf=0</pre>
+</div>
+<div created="20200131031737678" modified="20200131051254492" tags="" title="February Learning List" revision="1" bag="default">
+<pre>- Bayesian Network Course from Youtube
+- </pre>
 </div>
 <div created="20191227164059875" modified="20191227164351343" tags="math logic [[real analysis]]" title="For Every and There Exists" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* Negation of a for every x, proposition is true is there exists x such that proposition is false
@@ -10743,6 +10776,13 @@ It is the fundamental basis for all functional programming languages. </pre>
 <div created="20191120053237171" modified="20191121010456596" tags="incomplete research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
+<div created="20200131053010143" modified="20200131061210220" tags="topology [[metric spaces]]" title="Metric Spaces" revision="2" bag="default">
+<pre>* [[Open and Closed Sets]]
+* [[Completeness]]
+* [[The Real Line]]
+* [[Products of Metric Spaces]]
+* [[Continuous Functions]]</pre>
+</div>
 <div author="Siddharth Joshi" created="20191126064803358" modified="20191126072901553" tags="incomplete philosophy logic" title="Model Theory" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://plato.stanford.edu/entries/model-theory/</pre>
 </div>
@@ -10781,6 +10821,59 @@ see also: [[Standardization of Features]]</pre>
 <pre> Increasing dimensionality of a feature to represent it in the feature vector rather than assigning arbitrary ordered values that might mislead the model. 
 
 e..g: Encoding what major a college student as many dimensional vector with 1 in the index corresponding to the student's major and 0 everywhere else instead of assigning numbers 1, 2, 3 ... to the majors and implying an ordering. </pre>
+</div>
+<div created="20200131052738780" modified="20200131061119978" tags="[[metric spaces]] topology" title="Open and Closed Sets" revision="3" bag="default">
+<pre>Def: A metric is a real valued function with the following properties:
+
+* $$d(x, y) \geq 0, \forall x, y \in X$$
+* $$d(x, y) = 0 \iff x = y$$
+* $$d(x,y) = d(y,x)a$$
+* $$d(x,z) \leq d(x,y) + d(y,z)$$ (triangle inequality)
+
+Fact: Any set can be made into a discrete metric space by associating it with metric d defined by $$d(x,y) = 1, x \neq y$$ and $$d(x,y) = 0, x = y$$
+
+Def: Open ball $$B(x, r) = {y \in X: d(x,y) &lt; r}$$
+
+Fact: Infinite union of open balls of radius &gt; 0 around x = X - the metric space
+
+Fact: Infinite intersection of open balls of radius &gt; 0 around x = {x}
+
+Def: A point $$x \in X$$ is an interior point of Y if there exists r &gt; 0 s.t. $$B(x, r) \subset Y$$
+
+Def: The set of all interior points of Y is the interior of Y (int(Y)) and by definition $$int(Y) \subset Y$$
+
+Def: A subset Y of X is ''open'' if every point of Y is an interior point of Y
+
+Thm 1: Any open ball B(x, r) in a metric space X is an open subset of X
+
+Thm 2: Let Y be a subset of a metric space then int(Y) is an open subset of X
+
+Thm 3: The union of open subsets is open
+
+Thm 4: A subset U (of a metric space X is open) iff U is a union of open balls (in X)
+
+Thm 5: The intersection of any ''finite'' number of open subsets is open //(Hint: inf of finite positive numbers is positive)//
+
+Thm 6: Let Y be a subspace of a metric space X. Then a subset U of Y is open iff $$U = V \cap Y$$ for some open subset V of X
+
+Def: Let Y be a subset of a metric space X. A point $$x \in X$$ is adherent to Y if for all r &gt; 0 $$B(x, r) \cap Y \neq \emptyset$$
+
+Def: The closure of Y ($$\bar{Y}$$ or clos(Y)) is the set of all points in X that are adherent to Y. Obviously $$Y \subset \bar{Y}$$ as all points in Y are trivially adherent to Y (as the intersection must contain the point itself at the least)
+
+Def: A set is closed if $$Y = \bar{Y}$$
+
+Thm 7: The closure of a set Y is closed i.e. $$\bar{Y} = clos(\bar{Y}) $$
+
+Proof: Take a point x in clos(clos(Y)) and show it is adherent to Y by showing for arbitrary r, the ball around x of radius r intersects Y. 
+
+Thm 8: A subset Y is closed iff the complement of Y is open //(Hint: proof by contradiction)//
+
+Thm 9: The intersection of closed sets is closed. The union of finite closed sets is closed. //(Hint: use thm 8 and previous thms on union and intersection of open sets along with $$ X  -  \cap_{a \in A} E_a = \cup_{a \in A} X - E_a$$)//
+
+Lemma 10: The limit of a convergent sequence in a metric space is unique
+
+Thm 11: Let Y be a subset of the metric space X. Then $$x \in X$$ is adherent to Y iff there is a sequence in Y that converges to x$$
+</pre>
 </div>
 <div created="20200127012930899" modified="20200127013016165" tags="[[machine learning]]" title="Overfitting" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Overfitting:
@@ -11013,6 +11106,20 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 * [[Chapter 4 |Chapter 4 (The Hundred-Page Machine Learning Book)]]
 * [[Chapter 5 |Chapter 5 (The Hundred-Page Machine Learning Book)]]</pre>
 </div>
+<div created="20200131030723016" modified="20200131030941248" tags="" title="Things I want to learn about in 2020" revision="2" bag="default">
+<pre>* Machine Learning (in practice)
+* Reinforcement Learning
+* Bayesian Networks
+* Quantum Computing
+* Modern Cryptography
+* Research efforts in joining symbolic AI to Neural Networks</pre>
+</div>
+<div created="20200131000351410" modified="20200131051341597" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" revision="1" bag="default">
+<pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]]
+# [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]]
+# [[Quantum Temporal Logic by Nengkun Yu]]
+</pre>
+</div>
 <div created="20200126032331506" modified="20200126032430986" tags="ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[Overview of Machine Learning]]
@@ -11034,6 +11141,12 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 # [[Determinants]]
 # [[Diagonalization]]
 # [[Inner Products]]</pre>
+</div>
+<div created="20200131051404804" modified="20200131052953324" tags="incomplete topology math" title="UCLA Math 121 Topology" type="text/vnd.tiddlywiki" revision="9" bag="default">
+<pre>Syllabus:
+
+# [[Metric Spaces]]
+# [[Topological Spaces]]</pre>
 </div>
 <div author="Siddharth Joshi" created="20191120203243535" modified="20191227164441415" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
