Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9829,7 +9829,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200131001035174" list="[[Metric Spaces]] [[Continuous Functions]]" modified="20200131180352531" title="$:/StoryList" revision="149" bag="default">
+<div created="20200131001035174" list="[[Metric Spaces]] Compactness [[Continuous Functions]]" modified="20200131210639630" title="$:/StoryList" revision="150" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -11252,7 +11252,7 @@ while m(p) = 1, do S od; M(p) = 1, measure p by (M0, M1)
 
 Decidability of QTL formula - programs without nondeterminism, </pre>
 </div>
-<div created="20200131072027431" modified="20200131072105639" tags="incomplete [[real analysis]]" title="Real Numbers" revision="2" bag="default">
+<div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="3" bag="default">
 <pre></pre>
 </div>
 <div author="Siddharth Joshi" created="20191125022514242" modified="20191125022735084" tags="[[reinforcement learning]] [[machine learning]] incomplete" title="Reinforcement Learning: Introduction" type="text/vnd.tiddlywiki" revision="0" bag="default">
